Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!


2.1.0.2106
----------
- Only allow the active web view to set the status bar text.
- Added Simplified Chinese localisation. (Thanks to Arsen Liang).

2.1.0.2105
----------
- Add Blog With feature.
- Fix bug where mouse was tracking wrong browser tab.
- Fix bug: searching in 'any' smart folders wasn't done correctly.
- Updated all localisation except Traditional Chinese.
- Added Brazilian Portuguese localisation (thanks to Helvécio Mafra).
- Change URL with feed:// to http:// during refresh.
- Fix bug with expanding file:// path.
- Compare article titles case insensitively when looking for updates.
- Fix warning message for missing style.
- Add hidden preference to disable checking for updated articles.
- After clicking link in article pane to open in foreground of external browser,
  return focus to article list.
- Fix bug in date parser.
- If there are no connection errors during refresh, then set the subscription's
  last update date even if there is no data.  Could be http 304, for example.
- Added Korean localisation (thanks to Lee Seung Koo).
- Add AppleScript command for emptying trash.
- "Text contains" in smart folders now matches partial words.

2.1.0.2104
----------
- Update to Sparkle 1.1.
- Fix bug: preserved article is marked unread after folder reloaded.
- Fix bug: browser buttons were always enabled.
- Turn on manual sorting by default for new databases.
- When checking for new articles, include articles within 24 hours before last update,
  because feeds sometimes provide inaccurate dates.
- Assign new id to non-duplicate article with same id as existing article.
- Set our own last update date. Don't rely on the feed.
- Ensure that the article guid is truly unique between feeds.
  This fixes a bug where the wrong article was selected.