@@ -11,6 +11,7 @@ Thanks!
 ----------
 - Only allow the active web view to set the status bar text.
 - Added Simplified Chinese localisation. (Thanks to Arsen Liang).
+- Don't create a new article if the only difference is the article link.
 
 2.1.0.2105
 ----------
